--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.6.6",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
