--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
+    "emoji-mart": "^3.0.1",
     "firebase": "^9.6.6",
     "moment": "^2.29.1",
     "next": "latest",
